# safeshift

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: methodology.md  schema.md
evaluation/: expert_study.py  extended.py  graph_eval.py  results.json  results.md  results_graph.json  results_graph.md  results_robustness.json  results_robustness.md  results_scalability.json  results_scalability.md  results_security.json  results_security.md  run_eval.py  synthetic.py
evaluation/expert_validation/: PROTOCOL.md  build_elicitation.py  demo_ratings_SYNTHETIC.csv  elicitation_adas_BLINDED.csv  elicitation_connected_vehicle_BLINDED.csv  safeshift_key_adas.csv  safeshift_key_connected_vehicle.csv
examples/: example_adas_architecture.yaml  example_connected_vehicle_architecture.yaml  expected_report.md  expected_report_connected_vehicle.md
src/safeshift/: __init__.py  cli.py  features.py  gnn.py  graph.py  graph_synth.py  model.py  report.py  schema.py
tests/: test_gnn.py  test_graph_synth.py  test_safeshift.py
